--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "gocept_jsform_templates_text.pt",
     "jsform.js"
   ],
-  "version": "1.0",
+  "version": "1.2.1-a2",
   "dependencies": {
     "knockout": "*",
     "handlebars": "git://github.com/components/handlebars.js",
