--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,8 @@
 {
   "name": "gocept.jsform",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "main": [
     "helpers.js",
-    "ko.mapping.js",
     "list.js",
     "jsform.js",
     "gocept_jsform_templates_boolean.pt",
@@ -21,6 +20,7 @@
   ],
   "dependencies": {
     "knockout": "*",
+    "knockout-mapping": "*",
     "classy": "https://github.com/gocept/classy.git",
     "handlebars": "git://github.com/components/handlebars.js",
     "bootstrap": "~3.3",
