--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
   "name": "gocept.jsform",
-  "version": "2.6.3",
+  "version": "2.7.1",
   "main": [
     "helpers.js",
     "list.js",
     "jsform.js",
     "gocept_jsform_templates_boolean.pt",
+    "gocept_jsform_templates_values.pt",
     "gocept_jsform_templates_field_wrapper.pt",
     "gocept_jsform_templates_form.pt",
     "gocept_jsform_templates_multiselect.pt",
