--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,29 @@
 {
   "name": "gocept.jsform",
-  "version": "2.7.2",
+  "version": "2.8.0",
   "main": [
     "helpers.js",
-    "list.js",
+    "container.js",
     "jsform.js",
-    "gocept_jsform_templates_boolean.pt",
-    "gocept_jsform_templates_radio_list.pt",
-    "gocept_jsform_templates_field_wrapper.pt",
-    "gocept_jsform_templates_form.pt",
-    "gocept_jsform_templates_multiselect.pt",
-    "gocept_jsform_templates_object.pt",
-    "gocept_jsform_templates_string.pt",
-    "gocept_jsform_templates_text.pt",
+    "gocept_jsform_group.pt",
+    "gocept_jsform_group_item.pt",
     "gocept_jsform_list.pt",
     "gocept_jsform_list_item.pt",
     "gocept_jsform_list_item_action.pt",
     "gocept_jsform_list_item_edit.pt",
-    "gocept_jsform_list_item_wrapper.pt"
+    "gocept_jsform_list_item_wrapper.pt",
+    "gocept_jsform_table.pt",
+    "gocept_jsform_table_head.pt",
+    "gocept_jsform_table_row.pt",
+    "gocept_jsform_templates_boolean.pt",
+    "gocept_jsform_templates_field_wrapper.pt",
+    "gocept_jsform_templates_form.pt",
+    "gocept_jsform_templates_multiselect.pt",
+    "gocept_jsform_templates_number.pt",
+    "gocept_jsform_templates_object.pt",
+    "gocept_jsform_templates_radio_list.pt",
+    "gocept_jsform_templates_string.pt",
+    "gocept_jsform_templates_text.pt"
   ],
   "dependencies": {
     "knockout": "*",
