Make place for grunt and jasmine tests.

--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,21 @@
   "name": "gocept.jsform",
   "version": "2.5.1",
   "main": [
-    "helpers.js",
-    "list.js",
-    "jsform.js",
-    "gocept_jsform_templates_boolean.pt",
-    "gocept_jsform_templates_field_wrapper.pt",
-    "gocept_jsform_templates_form.pt",
-    "gocept_jsform_templates_multiselect.pt",
-    "gocept_jsform_templates_object.pt",
-    "gocept_jsform_templates_string.pt",
-    "gocept_jsform_templates_text.pt",
-    "gocept_jsform_list.pt",
-    "gocept_jsform_list_item.pt",
-    "gocept_jsform_list_item_action.pt",
-    "gocept_jsform_list_item_edit.pt",
-    "gocept_jsform_list_item_wrapper.pt"
+    "src/helpers.js",
+    "src/list.js",
+    "src/jsform.js",
+    "templates/gocept_jsform_templates_boolean.pt",
+    "templates/gocept_jsform_templates_field_wrapper.pt",
+    "templates/gocept_jsform_templates_form.pt",
+    "templates/gocept_jsform_templates_multiselect.pt",
+    "templates/gocept_jsform_templates_object.pt",
+    "templates/gocept_jsform_templates_string.pt",
+    "templates/gocept_jsform_templates_text.pt",
+    "templates/gocept_jsform_list.pt",
+    "templates/gocept_jsform_list_item.pt",
+    "templates/gocept_jsform_list_item_action.pt",
+    "templates/gocept_jsform_list_item_edit.pt",
+    "templates/gocept_jsform_list_item_wrapper.pt"
   ],
   "dependencies": {
     "knockout": "*",
