--- a/package.json
+++ b/package.json
@@ -24,5 +24,15 @@
   "bugs": {
     "url": "https://github.com/gocept/gocept.jsform/issues"
   },
-  "homepage": "https://github.com/gocept/gocept.jsform#readme"
+  "homepage": "https://github.com/gocept/gocept.jsform#readme",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-bower": "^0.20.0",
+    "grunt-bower-concat": "^0.6.0",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-jasmine": "^0.9.2",
+    "grunt-contrib-jshint": "^0.11.3",
+    "load-grunt-tasks": "^3.4.0"
+  }
 }
