--- a/bower.json
+++ b/bower.json
@@ -2,34 +2,16 @@
   "name": "gocept.jsform",
   "version": "2.8.0",
   "main": [
-    "helpers.js",
-    "container.js",
-    "jsform.js",
-    "gocept_jsform_group.pt",
-    "gocept_jsform_group_item.pt",
-    "gocept_jsform_list.pt",
-    "gocept_jsform_list_item.pt",
-    "gocept_jsform_list_item_action.pt",
-    "gocept_jsform_list_item_edit.pt",
-    "gocept_jsform_list_item_wrapper.pt",
-    "gocept_jsform_table.pt",
-    "gocept_jsform_table_head.pt",
-    "gocept_jsform_table_row.pt",
-    "gocept_jsform_templates_boolean.pt",
-    "gocept_jsform_templates_field_wrapper.pt",
-    "gocept_jsform_templates_form.pt",
-    "gocept_jsform_templates_multiselect.pt",
-    "gocept_jsform_templates_number.pt",
-    "gocept_jsform_templates_object.pt",
-    "gocept_jsform_templates_radio_list.pt",
-    "gocept_jsform_templates_string.pt",
-    "gocept_jsform_templates_text.pt"
+    "src/helpers.js",
+    "src/templates.js",
+    "src/container.js",
+    "src/jsform.js"
   ],
   "dependencies": {
     "knockout": "*",
     "bower-knockout-mapping": "*",
     "classy": "https://github.com/gocept/classy.git",
-    "handlebars": "git://github.com/components/handlebars.js",
+    "handlebars": "4.0.5",
     "bootstrap": "~3.3",
     "jquery": "~1.11",
     "jquery-ui": "~1.11"
