--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-bower-concat": "^0.6.0",
     "grunt-bower-task": "^0.4.0",
     "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-handlebars": "^0.11.0",
     "grunt-contrib-jasmine": "^0.9.2",
     "grunt-contrib-jshint": "^0.11.3",
     "load-grunt-tasks": "^3.4.0"
