Update version pinnings.
Depending on concrete pinnings for jquery(-ui) is not necessary as gocept.jsform
supports jquery 1.x and 2.x. Also add explicit version pinnings for knockout and
knockout-mapping as updating there by accident may break gocept.jsforms model
behaviour.

--- a/bower.json
+++ b/bower.json
@@ -8,12 +8,12 @@
     "src/jsform.js"
   ],
   "dependencies": {
-    "knockout": "*",
-    "bower-knockout-mapping": "*",
+    "knockout": "3.3.0",
+    "bower-knockout-mapping": "2.5.0",
     "classy": "https://github.com/gocept/classy.git",
     "handlebars": "4.0.5",
     "bootstrap": "~3.3",
-    "jquery": "~1.11",
-    "jquery-ui": "~1.11"
+    "jquery": "*",
+    "jquery-ui": "*"
  }
 }
