--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "grunt": "^0.4.5",
     "grunt-bower": "^0.20.0",
     "grunt-bower-concat": "^0.6.0",
-    "grunt-bump": "^0.7.0",
     "grunt-bower-task": "^0.4.0",
+    "grunt-bump": "^0.7.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-handlebars": "^0.11.0",
     "grunt-contrib-jasmine": "^0.9.2",
     "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "^3.4.0"
   },
   "dependencies": {
