--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grunt-contrib-jasmine": "^0.9.2",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-run": "^0.5.2",
     "load-grunt-tasks": "^3.4.0"
   },
   "dependencies": {
