--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "main": [
     "src/helpers.js",
     "src/templates.js",
-    "src/container.js",
+    "src/collection.js",
     "src/jsform.js"
   ],
   "dependencies": {
