Move TemplateHandler in extra file to make documentation easier.

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "main": [
     "src/helpers.js",
     "src/templates.js",
+    "src/template.js",
     "src/collection.js",
     "src/jsform.js"
   ],
