Switch to JSDoc for documenting API.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -12,6 +12,7 @@ PAPEROPT_a4     = -D latex_paper_size=a4
 PAPEROPT_letter = -D latex_paper_size=letter
 ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
+
 .PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest
 
 help:
@@ -33,10 +34,13 @@ help:
 	@echo "  linkcheck  to check all external links for integrity"
 	@echo "  doctest    to run all doctests embedded in the documentation (if enabled)"
 
+
 clean:
 	-rm -rf $(BUILDDIR)/*
+	-rm -rf src/api
 
 html:
+	../node_modules/.bin/jsdoc -t ../jsdoc-rst-template/template/ --recurse ../src/*.js -d ./src/api/
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
