--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-run": "^0.5.2",
+    "grunt-template-jasmine-istanbul": "^0.4.0",
     "jsdoc": "^3.4.0",
     "load-grunt-tasks": "^3.4.0"
   },
