--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "ajja",
-  "version": "3.0.2-dev.0",
+  "version": "4.0.0",
   "main": [
     "src/helpers.js",
     "src/localizations/en.js",
