Update doc URL in bower.json

--- a/bower.json
+++ b/bower.json
@@ -29,5 +29,5 @@
     {"name": "Thomas Lotze", "email": "tl@gocept.com"},
     {"name": "Maik Derstappen", "email": "md@derico.de"}
   ],
-  "homepage": "http://goceptjsform.readthedocs.org/"
+  "homepage": "http://ajja.readthedocs.org/"
 }
