--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "grunt-bower": "^0.20.0",
     "grunt-bower-concat": "^0.6.0",
     "grunt-bower-task": "^0.4.0",
-    "grunt-bump": "^0.7.0",
+    "grunt-bump": "0.7.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-handlebars": "^0.11.0",
