--- a/package.json
+++ b/package.json
@@ -26,21 +26,21 @@
   },
   "homepage": "https://github.com/gocept/ajja#readme",
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-bower": "^0.21.2",
+    "grunt-bower": "^0.21.4",
     "grunt-bower-concat": "^1.0.0",
     "grunt-bower-task": "^0.4.0",
     "grunt-bump": "0.8.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-handlebars": "^1.0.0",
-    "grunt-contrib-jasmine": "^1.0.3",
-    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-jasmine": "^1.1.0",
+    "jasmine-core": "2.1.0",
+    "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-run": "^0.6.0",
     "grunt-template-jasmine-istanbul": "^0.5.0",
-    "jsdoc": "^3.4.0",
-    "load-grunt-tasks": "^3.4.0"
+    "jsdoc": "^3.4.3",
+    "load-grunt-tasks": "^3.5.2"
   },
   "dependencies": {
     "grunt": "^1.0.1"
