--- a/bower.json
+++ b/bower.json
@@ -21,12 +21,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/gocept/ajja.git"
+    "url": "git://github.com/sweh/ajja.git"
   },
   "authors": [
-    {"name": "Sebastian Wehrmann", "email": "sw@gocept.com"},
-    {"name": "Florian Pilz", "email": "fp@gocept.com"},
-    {"name": "Thomas Lotze", "email": "tl@gocept.com"},
+    {"name": "Sebastian Wehrmann", "email": "sebastian@wehrmann.it"},
     {"name": "Maik Derstappen", "email": "md@derico.de"}
   ],
   "homepage": "http://ajja.readthedocs.org/"
