--- a/package.json
+++ b/package.json
@@ -26,24 +26,25 @@
   },
   "homepage": "https://github.com/sweh/ajja#readme",
   "devDependencies": {
+    "grunt": "1.0.1",
     "grunt-bower": "^0.21.4",
     "grunt-bower-concat": "^1.0.0",
-    "grunt-bower-task": "^0.5.0",
+    "grunt-bower-task": "0.5.0",
     "grunt-bump": "0.8.0",
     "grunt-cli": "^1.2.0",
-    "grunt-contrib-connect": "^2.1.0",
-    "grunt-contrib-handlebars": "^2.0.0",
-    "grunt-contrib-jasmine": "^2.1.0",
-    "jasmine-core": "3.5.0",
-    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-handlebars": "1.0.0",
+    "grunt-contrib-jasmine": "^1.1.0",
+    "grunt-contrib-jshint": "2.1.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-run": "^0.8.1",
+    "grunt-run": "0.8.1",
     "grunt-template-jasmine-istanbul": "^0.5.0",
+    "jasmine-core": "2.6.2",
     "jsdoc": "^3.4.3",
-    "load-grunt-tasks": "^5.1.0"
+    "load-grunt-tasks": "5.1.0"
   },
   "dependencies": {
-    "grunt": "^1.0.1",
-    "codecov": "3.6.2"
+    "codecov": "3.6.2",
+    "grunt": "1.0.3"
   }
 }
