--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         npm install
+        npm install -g teeny-request@3.11.3
         npm install -g codecov
         grunt
     - name: Run phantomjs tests
