--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,8 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         npm install
-        npm install -g teeny-request@3.11.3
-        npm install -g codecov
+        npm install -g codecov@3.6.3
         grunt
     - name: Run phantomjs tests
       run: |
